styling for tablet : avoid  clipping

--- a/app/CardPop/styles.module.scss
+++ b/app/CardPop/styles.module.scss
@@ -126,6 +126,13 @@
             top:70%;
             left:5%;
         }
+
+        .tablet{
+            @media (min-width:1024px) and (max-width: 1440px){
+                left: 2%;
+                top: 87%;            
+            }
+        }
     }
     .botRight{
         position: absolute;
@@ -134,6 +141,12 @@
         @media (max-width: 768px){
             top:70%;
             right:5%;
+        }
+        .tablet{
+            @media (min-width:1024px) and (max-width: 1440px){
+                left: 2%;
+                top: 87%;            
+            }
         }
     }
     .muteButton{
